@@ -93,6 +93,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [FilterS] Added *ipnet filter to check if the network contains the IP
   * [CacheS] Updated ReloadCache and LoadCache APIs to use a map instead of a structure to be compatible with gob encoding
   * [CGR-CONSOLE] Uniformize the commands between profile and subsystem
+  * [StatS] Add rounding operation for duration metric (e.g. acd, tcd, etc...)
 
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
